
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref 
"elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.36.1]]
== 0.36.1 (TBD)

icon:check[] REST: The deletion of microschemas which contain changes has been fixed. Previously a `NotImplementedException` was thrown for microschemas which contained changes. link:https://github.com/gentics/mesh/issues/589[#589]

icon:plus[] Core: Various internal structures and dependencies were re-organized and refactored.

icon:plus[] UI: The default set of enabled languages within the `mesh-ui-config.js` file has been updated to include more languages.

[[v0.36.0]]
== 0.36.0 (12.06.2019)

CAUTION: Java Rest Client

[quote]
____

The default field values for `NodeResponse` and `AbstractGenericRestResponse` has been updated. 

The following values have been changed:

* `AbstractGenericRestResponse#permissions`
* `NodeResponse#tags`
* `NodeResponse#childrenInfo`
* `NodeResponse#container`
* `NodeResponse#fields`
* `NodeResponse#breadcrumb`

The `NodeResponse#isContainer` method has been deprecated and was replaced by `NodeResponse#getContainer`

Applications which use affected models will most likely not need to updated since the returned response will always set the affected fields.
____

icon:plus[] REST: The `?fields` query parameter which can be used to filter response properties will now work more granularly on node responses.

CAUTION: Custom node migration scripts have been removed.

[quote]
____

The script system was a source of possible errors and performance problems. Also, the nashorn javascript engine has been deprecated with the release of Java 11. If you need to change data for a migration, use the REST Api instead.
____

icon:check[] REST: Fixed a bug that sometimes caused a wrong image to be sent to the client when using image manipulation. link:https://github.com/gentics/mesh/issues/669[#669]
