@@ -30,7 +30,7 @@ ENV JAVA_1_8_HOME /usr/lib/jvm/java-8
 # Install Java 11
 RUN mkdir -p /usr/lib/jvm/ && \
    cd /usr/lib/jvm/ && \
-   wget -nv -O openjdk-11.tar.gz "https://github.com/AdoptOpenJDK/openjdk11-binaries/releases/download/jdk-11.0.2%2B9/OpenJDK11U-jdk_x64_linux_hotspot_11.0.2_9.tar.gz" && \
+   wget -nv -O openjdk-11.tar.gz "https://github.com/AdoptOpenJDK/openjdk11-binaries/releases/download/jdk-11.0.3%2B7/OpenJDK11U-jre_x64_linux_hotspot_11.0.3_7.tar.gz" && \
    tar xfz openjdk-11.tar.gz && \
    rm *.gz && \
    mv jdk-11* java-11
